task-1/k8s/base/deployment-reporting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      serviceAccountName: reporting
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: client
          image: curlimages/curl:8.10.1
          imagePullPolicy: IfNotPresent
          command: ["sleep", "infinity"]
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
          livenessProbe:
            exec:
              command: ["sh", "-c", "pgrep sleep >/dev/null"]
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["sh", "-c", "pgrep sleep >/dev/null"]
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
